fix: update settings modal to avoid overflow in mobile devices
PR-URL: https://github.com/stdlib-js/www/pull/71

--- a/public/css/docs/layout.css
+++ b/public/css/docs/layout.css
@@ -1032,6 +1032,7 @@ h2 {
 	max-height: 832px;
 	width: 100%;
 	max-width: 380px; /* 1040px */
+	overflow: auto;
 }
 
 .settings-menu-head {
